Formularios por template, dinamicos

--- a/src/app/template/dinamicos/dinamicos.component.html
+++ b/src/app/template/dinamicos/dinamicos.component.html
@@ -1,1 +1,101 @@
-<p>dinamicos works!</p>
+<h2>Template: Dinámicos</h2>
+<hr>
+
+<form
+  (ngSubmit)="guardar()"
+  autocomplete="off"
+  #miFormulario="ngForm"
+>
+
+  <!-- Nombre -->
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label">Nombre</label>
+    <div class="col-sm-9">
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Nombre del usuario"
+        name="nombre"
+        [ngModel]="persona.nombre"
+        required
+      />
+      <span
+        class="form-text text-danger"
+        *ngIf="miFormulario.controls['nombre']?.errors && miFormulario.controls['nombre']?.touched"
+      >
+        Este campo es obligatorio
+      </span>
+    </div>
+  </div>
+
+  <!-- Agregar -->
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label">Agregar</label>
+    <div class="col-sm-9">
+      <div class="input-group">
+        <input
+        type="text"
+        class="form-control"
+        placeholder="Agregar favorito"
+        [(ngModel)]="nuevoJuego"
+        (keyup.enter)="agregarJuego()"
+        name="nuevoJuego"
+      />
+      <button
+        class="btn btn-outline-primary"
+        type="button"
+        (click)="agregarJuego()"
+      >
+        Agregar
+      </button>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- Lista Favoritos -->
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label">Favoritos</label>
+    <div class="col-sm-9">
+
+      <div
+        class="input-group mb-1"
+        *ngFor="let juego of persona.favoritos; let i = index"
+      >
+        <input
+          type="text"
+          class="form-control"
+          [(ngModel)]="juego.nombre"
+          name="favorito_{{ i }}"
+          required
+        />
+        <button
+          class="btn btn-outline-danger"
+          type="button"
+          (click)="eliminar(i)"
+        >
+          eliminar
+        </button>
+      </div>
+
+
+    </div>
+  </div>
+
+  <!-- Button -->
+  <div class="mb-3 row">
+    <div class="col">
+      <button
+        type="button"
+        class="btn btn-primary float-end"
+        (click)="guardar()"
+        [disabled]="miFormulario.invalid"
+      >
+        Guardar
+      </button>
+    </div>
+  </div>
+</form>
+
+<span>Persona</span>
+<pre> {{ persona | json }} </pre>
