--- a/src/app/reactive/dinamicos/dinamicos.component.html
+++ b/src/app/reactive/dinamicos/dinamicos.component.html
@@ -1,1 +1,110 @@
-<p>dinamicos works!</p>
+<h2>Reactivos: Dinámicos</h2>
+<hr>
+
+<form
+  autocomplete="off"
+  [formGroup]="miFormulario"
+  (ngSubmit)="guardar()"
+>
+
+  <!-- Nombre -->
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label">Nombre</label>
+    <div class="col-sm-9">
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Nombre del usuario"
+        formControlName="nombre"
+      />
+      <span
+        *ngIf="isValid('nombre')"
+        class="form-text text-danger"
+      >
+        Este campo es obligatorio
+      </span>
+    </div>
+  </div>
+
+  <!-- Agregar -->
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label">Agregar</label>
+    <div class="col-sm-9">
+      <div class="input-group">
+        <input
+        type="text"
+        class="form-control"
+        placeholder="Agregar favorito"
+        [formControl]="nuevoFavorito"
+        (keyup.enter)="agregarFavorito()"
+      />
+      <button
+        class="btn btn-outline-primary"
+        type="button"
+        (click)="agregarFavorito()"
+      >
+        Agregar
+      </button>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- Lista Favoritos -->
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label">Favoritos</label>
+    <div class="col-sm-9" formArrayName="favoritos">
+
+      <div
+        class="input-group mb-1"
+        *ngFor="let favorito of favoritosArr.controls; let i = index"
+      >
+        <input
+          type="text"
+          class="form-control"
+          [formControlName]="i"
+        />
+        <button
+          class="btn btn-outline-danger"
+          type="button"
+          (click)="borrar(i)"
+        >
+          eliminar
+        </button>
+      </div>
+
+
+    </div>
+  </div>
+
+  <!-- Button -->
+  <div class="mb-3 row">
+    <div class="col">
+      <button
+        type="submit"
+        class="btn btn-primary float-end"
+      >
+        Guardar
+      </button>
+    </div>
+  </div>
+</form>
+
+<span>Persona</span>
+
+<div class="row">
+  <div class="col">
+    <span>Valid</span>
+    <pre> {{ miFormulario.valid }} </pre>
+
+    <span>Pristine</span>
+    <pre> {{ miFormulario.pristine }} </pre>
+
+    <span>Value</span>
+    <pre> {{ miFormulario.value | json }} </pre>
+
+    <span>Agregar Juego</span>
+    <pre> {{ nuevoFavorito.value }} </pre>
+
+  </div>
+</div>
