--- a/src/app/shared/sidemnu/sidemnu.component.html
+++ b/src/app/shared/sidemnu/sidemnu.component.html
@@ -24,3 +24,16 @@
   >{{ menu.texto }}</li>
 
 </ul>
+
+<hr>
+<h2>Auth</h2>
+<hr>
+
+<ul class="list-group">
+  <li
+    class="list-group-item"
+    *ngFor="let item of authMenu"
+    [routerLink]="item.ruta"
+    routerLinkActive="active"
+  > {{ item.texto }} </li>
+</ul>
